# wine_project

./: .env.example  .gitignore  Makefile  README.md  README_RUS.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  Dockerfile  Makefile  alembic.ini  entrypoint.sh  package-lock.json  pyproject.toml  pytest.ini
backend/migrations/: env.py
backend/migrations/versions/: 0a4fb26b3c74_fix_change_fingerprint_type_from_str_to_.py  0d30d0aacd26_fix_rewrite_save_deleted_md_user_trigger.py  10bdf9662be6_fix_add_composite_pk_in_the_status_.py  144350456758_fix_return_the_cfgname_column_in_.py  17e9216ae629_fix_add_email_value_to_userdeleted_table.py  18a9ae60dfff_fix_move_unique_constraint_from_md_.py  1a7ea0cbb653_fix_rewrite_tsv_content_trigger_now_it_.py  1a9d62fd2684_feat_add_content_tables.py  1d3d4149c3d2_fix_change_fingerprint_type_from_int32_.py  1dcd4f4de03b_feat_add_n_m_table_tag_article.py  1eb12a35658c_feat_move_image_src_to_article_.py  23c392fbd236_fix_remove_slug_from_tag_table.py  27642e39f3d6_feat_initialize_triggers.py  281e949f22cb_feat_drop_unique_constraint_from_.py  2b01a985180a_feat_add_statuses_for_article.py  321e74f1a5d7_.py  3af85b38f593_fix_allow_login_to_be_null_in_the_user_.py  4040387543fe_feat_add_cascade_delete_on_all_tables.py  40dd694d3fc1_feat_add_trigger_for_saving_version_of_.py  47ce52168a92_feat_add_tsv_content_trigger_function_.py  4906a75d7ed2_fix_do_update_if_delete_some_data_with_.py  4c05946b7820_fix_remove_len_constaint_of_slug_from_.py  53945805aa08_feat_add_crm_tables.py  5652e7c03723_feat_add_status_data.py  5b7fb8c0c0f9_feat_add_is_registered_field_to_user_.py  5fbbe2ffe8d4_add_delete_triggers.py  5fd0d3570faf_feat_add_main_tables_for_articles.py  5ff22cfba6c5_feat_refromat_tokens_tables.py  668a7da7e661_fix_lead_id_in_the_deal_table_now_unique.py  6a452d282ffb_feat_add_information_of_planning_.py  799f116f48eb_feat_add_unique_constraint_language_id_.py  7ef0f00a3eaf_fix_rename_author_translate_to_author.py  8a22b92e848e_fix_drop_unique_constaint_from_.py  8b840e7f6b66_feat_initialize_tables_for_deleted_data.py  90c8003bcc93_fix_change_type_of_deal_cost_from_money_.py  9901fc81008c_fix_rewrite_unique_constraint_for_.py  9a1cd467a028_feat_reformat_the_update_tsvector_.py  9cac1c212149_feat_available_creating_user_only_with_.py  a1bb00029f96_feat_init_database.py  a52cafaf7ad2_feat_add_cascade_region_delete.py  (+22 more)
backend/src/: main.py
backend/src/api/: routes.py
backend/src/core/: config.py  general_constants.py
backend/src/db/: base_models.py  models.py  statement.py  trigers.py  triggers.py
backend/src/domain/: enums.py  exceptions.py
backend/src/dto/: content_dto.py  deal_dto.py  language_dto.py  message_dto.py  partner_dto.py  user_dto.py
backend/src/repository/: article_repository.py  auth_code_repository.py  content_repository.py  country_repository.py  deal_repository.py  grape_repository.py  partner_repository.py  region_repository.py  token_repository.py  user_repository.py
backend/src/schemas/: article_schema.py  content_schema.py  country_schema.py  deal_schema.py  grape_schema.py  language_schema.py  message_schema.py  (+5 more)
backend/tests/: conftest.py  test_statements.py
(+262 files in other folders)
